# kh8

./: .gitignore  CMakeLists.txt  build_and_run.sh  convertor.py  fsr2_integration_dx12.cpp   index.html  main.cpp  old.py  package-lock.json  package.json  run_pipeline.py  tailwind.config.js  test_setup.sh  vite.config.ts
backend/: old.py  requirements.txt  run_pipeline.py  server.py
dist-electron/: main.js
electron/: main.ts  preload.ts
src/: App.css  App.tsx  index.css
src/components/: FileDropzone.tsx  Logo.tsx  UploadIcon.tsx  VideoPlayer.tsx
